--- a/src/page/devManagement/index.css
+++ b/src/page/devManagement/index.css
@@ -307,14 +307,18 @@
 }
 
 .dev_itme {
-    /* margin: 1%; */
+    margin: 1% 2% 1% 0;
     float: left;
     box-sizing: border-box;
-    /* padding: 20px; */
-    width: 31%;
+    padding: 20px 0;
+    width: 32%;
     height: 100px;
     background: #fff;
     border-radius: 2px;
+}
+
+.dev_itme:last-of-type {
+    margin: 1% 0% 1% 0;
 }
 
 .dev_num {
@@ -371,3 +375,65 @@
     height: calc(100% - 40px);
     background: #fff;
 }
+
+
+/*********** 货柜3 称算法 ***********/
+
+#container3_box {
+    width: 100%;
+    height: 100%;
+}
+
+.container2_layer {
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    width: 70px;
+    height: 30px;
+    border-radius: 4px;
+    line-height: 30px;
+    color: #fff;
+    font-size: 16px;
+    background: #ff9b3c;
+}
+
+.container3_itme {
+    margin: 40px auto 16px;
+    width: 49%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 140px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+}
+
+.container3_itme:nth-of-type(2n) {
+    margin-left: 2%;
+}
+
+.container3_itme:hover {
+    background: #eaeaea;
+}
+
+.container3_itme .itme_img {
+    width: 120px;
+    height: 120px;
+}
+
+.container3_itme .itme_info {
+    width: 120px;
+    height: 120px;
+    text-align: left;
+    padding-left: 30px;
+}
+
+.container3_itme .itme_info div {
+    width: 120px;
+    height: 40px;
+    line-height: 40px;
+}
+
+
+/*  */
