--- a/src/page/devManagement/index.css
+++ b/src/page/devManagement/index.css
@@ -21,8 +21,8 @@
 
 .photo {
     padding: 0 5px;
-    width: 60px;
-    height: 60px;
+    width: 75px;
+    height: 80px;
     float: left;
 }
 
@@ -155,9 +155,9 @@
     padding: 5px;
     word-break: break-all;
     word-wrap: break-word;
-    line-height: 23px;
+    line-height: 33px;
     overflow: hidden;
-    height: 23px;
+    height: 33px;
     width: 100%;
 }
 
@@ -248,7 +248,7 @@
 }
 
 .editicon {
-    /* background: url(./assets/images/devm/edit.png) left bottom no-repeat; */
+    background: url(/assets/images/devm/edit.png) left bottom no-repeat;
     margin-top: 5px;
     margin-left: 5px;
     cursor: pointer;
@@ -374,65 +374,6 @@
     width: 98%;
     height: calc(100% - 40px);
     background: #fff;
-}
-
-
-/*********** 货柜3 称算法 ***********/
-
-#container3_box {
-    width: 100%;
-    height: 100%;
-}
-
-.container2_layer {
-    position: absolute;
-    top: 5px;
-    left: 5px;
-    width: 70px;
-    height: 30px;
-    border-radius: 4px;
-    line-height: 30px;
-    color: #fff;
-    font-size: 16px;
-    background: #ff9b3c;
-}
-
-.container3_itme {
-    margin: 40px auto 16px;
-    width: 49%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    height: 140px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-}
-
-.container3_itme:nth-of-type(2n) {
-    margin-left: 2%;
-}
-
-.container3_itme:hover {
-    background: #eaeaea;
-}
-
-.container3_itme .itme_img {
-    width: 120px;
-    height: 120px;
-}
-
-.container3_itme .itme_info {
-    width: 120px;
-    height: 120px;
-    text-align: left;
-    padding-left: 30px;
-}
-
-.container3_itme .itme_info div {
-    width: 120px;
-    height: 40px;
-    line-height: 40px;
 }
 
 
